--- a/templates/page/index.html.twig
+++ b/templates/page/index.html.twig
@@ -6,8 +6,7 @@
 {% block body %}
 	<h1>Home</h1>
 	<img src="{{ asset('images/logo-google.png') }}" alt="Google Logo">
-	<h2>The age is:
-		{{ age }}
+	<h2>The age is: {{ age }}
 	</h2>
 	{% if age >= 18 %}
 		<h3>You are allowed</h3>
